Add Supabase Authentication
Signed-off-by: thebatdan <github@roux.one>